# aqr

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aqr/: __init__.py  __main__.py  cli.py  insight_loop.py  main.py  orchestrator.py
aqr/agents/: research_planner.py
aqr/api/: server.py
aqr/blocks/: __init__.py  registry.py
aqr/data/: __init__.py  manifest.py  moex.py
aqr/db/: dedup.py  schema.py
aqr/generators/: base.py  diversity.py  exploiter.py  explorer.py  mutator.py
aqr/memory/: __init__.py  store.py
aqr/pipeline/: __init__.py  api.py  events.py  executor.py  hypotheses.py  narrator.py  planner.py  reviewer.py
aqr/queue/: streams.py
aqr/validation/: __init__.py  cpcv.py  deflated_sharpe.py  pbo.py  reality_check.py
aqr/workers/: backtest_worker.py
config/: generators.yaml
docs/: AUTONOMOUS_RESEARCH_ENGINE.md  COLLABORATIVE_AGENT_PLATFORM.md  COMPETITIVE_LANDSCAPE.md  RESEARCH_ARCHIVE.md  WHITEPAPER_DRAFT.md
tests/: test_blocks_registry.py  test_pipeline_e2e.py  test_reviewer.py  test_validation.py
ui/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: CostChart.tsx  GeneratorMixDonut.tsx  GeneratorTable.tsx  Header.tsx  InsightsPanel.tsx  KpiCards.tsx  LiveFeed.tsx  ThroughputChart.tsx  TopHypothesesTable.tsx
ui/src/hooks/: useSSE.ts  useThroughputHistory.ts
