[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqr"
version = "0.1.0"
description = "LLM-driven quantitative research framework for MOEX markets, with rigorous statistical validation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vadim Rybalko" }]
requires-python = ">=3.11"
keywords = ["quantitative-finance", "moex", "llm", "backtest", "deflated-sharpe", "cpcv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "duckdb>=1.0",
    "requests>=2.31",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.34",
    "openai>=1.40",
    "litellm>=1.45",
    "faiss-cpu>=1.7",
]
stream = [
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/vadryb13/aqr"
Issues = "https://github.com/vadryb13/aqr/issues"

[project.scripts]
aqr = "aqr.cli:app"

[tool.setuptools.packages.find]
include = ["aqr*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM108"]
