[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqr"
version = "0.2.0"
description = "Thin pipeline: natural-language goal -> validated hypotheses on MOEX"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vadim Rybalko" }]
requires-python = ">=3.11"
keywords = ["quantitative-finance", "moex", "backtest", "deflated-sharpe", "cpcv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Ядро — минимум, без которого ничего не работает
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# LLM-режим планировщика и нарратора (fallback работает без этого)
llm = [
    "litellm>=1.45",
]
# Point-in-time data manifest (пока не подключён к pipeline, но модуль есть)
data = [
    "duckdb>=1.0",
]
# Разработка
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/vadryb13/aqr"
Issues = "https://github.com/vadryb13/aqr/issues"

[project.scripts]
aqr = "aqr.cli:main"

[tool.setuptools.packages.find]
include = ["aqr*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM108"]
